# pieces

./: .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  readme.md  readme.txt  renovate.json
.github/workflows/: main.yml
examples/: simple_hello.rs
src/: args.rs  commands.rs  lib.rs  parser.rs
tests/: args.rs  commans.rs  parser.rs
